# event_booker_backend

./: .coveragerc  .gitignore  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4516dbd76b26_create_enrollments_table.py  67a73741ba20_add_password_username_and_role_to_users.py  b44a5fc9988f_create_enrollments_table.py  ca7bd2140eb0_create_revoked_tokens_table.py  d15d1a2afc72_create_events_table.py  ea439f734974_create_users_table.py
app/: config.py  exceptions.py  main.py  router.py
app/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py  validators.py
app/database/: config.py  connection.py
app/events/: authorizers.py  dependencies.py  exceptions.py  filters.py  models.py  router.py  schemas.py  services.py
app/pagination/: dependencies.py  enums.py  schemas.py  services.py
app/tests/: conftest.py  factories.py  utils.py
app/tests/auth/: create_test.py  refresh_test.py  revoke_test.py
app/tests/auth/dependencies/: authenticate_from_token_test.py
app/tests/events/: cancel_enrollment_test.py  create_test.py  delete_test.py  enroll_test.py  get_all_events_test.py  get_event_test.py  organizer_event_details_test.py  organizer_events_test.py  participant_events_test.py  update_test.py
app/tests/users/: create_test.py
app/users/: enums.py  exceptions.py  models.py  router.py  schemas.py  services.py  validators.py
